--- a/Genaralized Enrichment/src/TODO
+++ b/Genaralized Enrichment/src/TODO
@@ -6,3 +6,5 @@ TODO list for the project
 4. save parameter setting
 5. save pre-permutation result
 6. multi-processing for permutation test
+7. multiple gene list analysis
+8. multiple gene comparison analysis
