--- a/Genaralized Enrichment/src/TODO
+++ b/Genaralized Enrichment/src/TODO
@@ -8,3 +8,4 @@ TODO list for the project
 6. multi-processing for permutation test
 7. multiple gene list analysis
 8. multiple gene comparison analysis
+9. present in HTML
