--- a/Genaralized Enrichment/src/TODO
+++ b/Genaralized Enrichment/src/TODO
@@ -12,4 +12,4 @@ TODO list for the project
 10. exception handling
 11. write leading edge gene set to filed
 12. font, axis in plots
-13. default parameter
+13. default parameter change
