--- a/Genaralized Enrichment/src/TODO
+++ b/Genaralized Enrichment/src/TODO
@@ -13,3 +13,4 @@ TODO list for the project
 11. write leading edge gene set to file (done)
 12. font, axis in plots
 13. default parameter change (done)
+14. update all line plot to XYlineplot
