--- a/Genaralized Enrichment/src/TODO
+++ b/Genaralized Enrichment/src/TODO
@@ -15,3 +15,4 @@ TODO list for the project
 13. default parameter change (done)
 14. update all line plot to XYlineplot (done)
 15. mark the max ratio point
+16. support multi-type files
